@@ -1,0 +1,1 @@
+"c:\program files\nsis\makensis" cruise.nsi
